// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile functions with lazy arguments functions call requesting lazy parameters 1`] = `
"function anonymous(cell,range,ctx
) {
// =USELAZYARG(24)
let _2 = ()=> 24
ctx.__lastFnCalled = 'USELAZYARG'
let _1 = ctx['USELAZYARG'](_2)
return _1;
}"
`;

exports[`compile functions with lazy arguments functions call requesting lazy parameters 2`] = `
"function anonymous(cell,range,ctx
) {
// =USELAZYARG(1/0)
ctx.__lastFnCalled = 'DIVIDE'
let _2 = ()=> ctx['DIVIDE'](1, 0)
ctx.__lastFnCalled = 'USELAZYARG'
let _1 = ctx['USELAZYARG'](_2)
return _1;
}"
`;

exports[`compile functions with meta arguments function call requesting meta parameter 1`] = `
"function anonymous(cell,range,ctx
) {
// =USEMETAARG(A1)
let _2 = \\"A1\\"
ctx.__lastFnCalled = 'USEMETAARG'
let _1 = ctx['USEMETAARG'](_2)
return _1;
}"
`;

exports[`compile functions with meta arguments function call requesting meta parameter 2`] = `
"function anonymous(cell,range,ctx
) {
// =USEMETAARG(B2)
let _2 = \\"B2\\"
ctx.__lastFnCalled = 'USEMETAARG'
let _1 = ctx['USEMETAARG'](_2)
return _1;
}"
`;

exports[`expression compiler async functions 1`] = `
"async function anonymous(cell,range,ctx
) {
// =WAIT(5)
ctx.__lastFnCalled = 'WAIT'
let _1 = await ctx['WAIT'](5)
return _1;
}"
`;

exports[`expression compiler cells are converted to ranges if function require a range 1`] = `
"function anonymous(cell,range,ctx
) {
// =sum(A1)
let _2 = cell(0)
ctx.__lastFnCalled = 'SUM'
let _1 = ctx['SUM']([[_2]])
return _1;
}"
`;

exports[`expression compiler expression with $ref 1`] = `
"function anonymous(cell,range,ctx
) {
// =$A1+$A$2+A$3
let _3 = cell(0)
let _4 = cell(1)
ctx.__lastFnCalled = 'ADD'
let _2 = ctx['ADD'](_3, _4)
let _5 = cell(2)
ctx.__lastFnCalled = 'ADD'
let _1 = ctx['ADD'](_2, _5)
return _1;
}"
`;

exports[`expression compiler expression with references with a sheet 1`] = `
"function anonymous(cell,range,ctx
) {
// =Sheet34!B3
let _1 = cell(0)
return _1;
}"
`;

exports[`expression compiler expressions with a debugger 1`] = `
"function anonymous(cell,range,ctx
) {
// =? A1 / 2
debugger;
let _2 = cell(0)
ctx.__lastFnCalled = 'DIVIDE'
let _1 = ctx['DIVIDE'](_2, 2)
return _1;
}"
`;

exports[`expression compiler function call 1`] = `
"function anonymous(cell,range,ctx
) {
// =sum(1,2)
ctx.__lastFnCalled = 'SUM'
let _1 = ctx['SUM'](1,2)
return _1;
}"
`;

exports[`expression compiler function call 2`] = `
"function anonymous(cell,range,ctx
) {
// =sum(true, \\"\\")
ctx.__lastFnCalled = 'SUM'
let _1 = ctx['SUM'](true,\\"\\")
return _1;
}"
`;

exports[`expression compiler function call 3`] = `
"function anonymous(cell,range,ctx
) {
// =sum(1,,2)
ctx.__lastFnCalled = 'SUM'
let _1 = ctx['SUM'](1,null,2)
return _1;
}"
`;

exports[`expression compiler read some values and functions 1`] = `
"function anonymous(cell,range,ctx
) {
// =A1 + sum(A2:C3)
let _2 = cell(0)
let _4 = range(0);
ctx.__lastFnCalled = 'SUM'
let _3 = ctx['SUM'](_4)
ctx.__lastFnCalled = 'ADD'
let _1 = ctx['ADD'](_2, _3)
return _1;
}"
`;

exports[`expression compiler simple values 1`] = `
"function anonymous(cell,range,ctx
) {
// =1
return 1;
}"
`;

exports[`expression compiler simple values 2`] = `
"function anonymous(cell,range,ctx
) {
// =true
return true;
}"
`;

exports[`expression compiler simple values 3`] = `
"function anonymous(cell,range,ctx
) {
// =\\"abc\\"
return \\"abc\\";
}"
`;

exports[`expression compiler some arithmetic expressions 1`] = `
"function anonymous(cell,range,ctx
) {
// =1 + 3
ctx.__lastFnCalled = 'ADD'
let _1 = ctx['ADD'](1, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 2`] = `
"function anonymous(cell,range,ctx
) {
// =2 * 3
ctx.__lastFnCalled = 'MULTIPLY'
let _1 = ctx['MULTIPLY'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 3`] = `
"function anonymous(cell,range,ctx
) {
// =2 - 3
ctx.__lastFnCalled = 'MINUS'
let _1 = ctx['MINUS'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 4`] = `
"function anonymous(cell,range,ctx
) {
// =2 / 3
ctx.__lastFnCalled = 'DIVIDE'
let _1 = ctx['DIVIDE'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 5`] = `
"function anonymous(cell,range,ctx
) {
// =-3
ctx.__lastFnCalled = 'UMINUS'
let _1 = ctx['UMINUS']( 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 6`] = `
"function anonymous(cell,range,ctx
) {
// =(3 + 1) * (-1 + 4)
ctx.__lastFnCalled = 'ADD'
let _2 = ctx['ADD'](3, 1)
ctx.__lastFnCalled = 'UMINUS'
let _4 = ctx['UMINUS']( 1)
ctx.__lastFnCalled = 'ADD'
let _3 = ctx['ADD'](_4, 4)
ctx.__lastFnCalled = 'MULTIPLY'
let _1 = ctx['MULTIPLY'](_2, _3)
return _1;
}"
`;
